--- a/index.html
+++ b/index.html
@@ -5,7 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sameh Waghmare</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="about">
+        I like music.
+    </section>
+
+    <section id="portfolio">
+        <!-- Your portfolio section content goes here -->
+    </section>
+
+    <section id="contact">
+        <!-- Your contact section content goes here -->
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
