--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>My Website</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <title>Personal Portfolio</title>
   </head>
 
   <body>
-    <!-- Header -->
     <section id="header">
       <div class="header container">
         <div class="nav-bar">
           <div class="brand">
             <a href="#hero">
-              <h1>Web Coding</h1>
+              <h1>Portfolio</h1>
             </a>
           </div>
           <div class="nav-list">
@@ -31,9 +34,7 @@
         </div>
       </div>
     </section>
-    <!-- End Header -->
 
-    <!-- Hero Section  -->
     <section id="hero">
       <div class="hero container">
         <div>
@@ -44,66 +45,47 @@
         </div>
       </div>
     </section>
-    <!-- End Hero Section  -->
 
-    <!-- Service Section -->
     <section id="services">
       <div class="services container">
         <div class="service-top">
           <h1 class="section-title">SERVICES</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum
-            deleniti maiores pariatur assumenda quas magni et, doloribus quod
-            voluptate quasi molestiae magnam officiis dolorum, dolor provident
-            atque molestias voluptatum explicabo!
+            I've had a deep passion for 3D modeling and graphic design, which
+            led me to explore various software tools and techniques. Over the
+            years, I've worked on a wide range of projects, from creating
+            intricate 3D models to designing eye-catching graphics for various
+            clients. This diverse experience has equipped me with a versatile
+            skill set, allowing me to take on a multitude of creative challenges
+            with confidence.
           </p>
         </div>
         <div class="service-bottom">
           <div class="service-item">
             <div class="icon">
-              <img
-                src="https://img.icons8.com/bubbles/100/000000/services.png"
-              />
+              <img src="https://img.icons8.com/color/144/paint-brush.png" />
             </div>
-            <h2>Web Design</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              debitis rerum, magni voluptatem sed architecto placeat beatae
-              tenetur officia quod
-            </p>
+            <h2>Graphic Design</h2>
+            <p>I can offer you branding and graphic design services.</p>
           </div>
           <div class="service-item">
             <div class="icon">
-              <img
-                src="https://img.icons8.com/bubbles/100/000000/services.png"
-              />
+              <img src="https://img.icons8.com/color/144/bust.png" />
             </div>
-            <h2>Web Design</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              debitis rerum, magni voluptatem sed architecto placeat beatae
-              tenetur officia quod
-            </p>
+            <h2>3D Art</h2>
+            <p>I can create mockups and 3D models for you.</p>
           </div>
           <div class="service-item">
             <div class="icon">
-              <img
-                src="https://img.icons8.com/bubbles/100/000000/services.png"
-              />
+              <img src="https://img.icons8.com/color/144/guitar.png" />
             </div>
-            <h2>Web Design</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              debitis rerum, magni voluptatem sed architecto placeat beatae
-              tenetur officia quod
-            </p>
+            <h2>Music Producer</h2>
+            <p>I can record or produce music for my clients.</p>
           </div>
         </div>
       </div>
     </section>
-    <!-- End Service Section -->
 
-    <!-- Projects Section -->
     <section id="projects">
       <div class="projects container">
         <div class="projects-header">
@@ -112,58 +94,78 @@
         <div class="all-projects">
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 1</h1>
-              <h2>Coding is Love</h2>
+              <h1>Parallax Scrolling</h1>
+              <h2>Web Coding ICA</h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,
-                iusto cupiditate voluptatum impedit unde rem ipsa distinctio
-                illum quae mollitia ut, accusantium eius odio ducimus illo neque
-                atque libero non sunt harum? Ipsum repellat animi, fugit
-                architecto voluptatum odit et!
+                For my college assignment, I developed a dynamic and engaging
+                website dedicated to energy drinks. The primary focus of the
+                website is to promote and provide information about various
+                energy drink products in an interactive and visually appealing
+                manner. To achieve this, I employed the parallax scrolling
+                technique, which adds depth and dimension to the user's browsing
+                experience.
               </p>
+              <a href="https://energydrink.netlify.app/#energy" target="_blank"
+                >View Now!</a
+              >
             </div>
             <div class="project-img">
-              <img src="./img/img-1.png" alt="img" />
+              <img src="images/prlx.png" alt="prlx" />
             </div>
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 2</h1>
-              <h2>Coding is Love</h2>
+              <h1>Together Music Video</h1>
+              <h2>Blender</h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,
-                iusto cupiditate voluptatum impedit unde rem ipsa distinctio
-                illum quae mollitia ut, accusantium eius odio ducimus illo neque
-                atque libero non sunt harum? Ipsum repellat animi, fugit
-                architecto voluptatum odit et!
+                I produced a music video for a client by utilizing a combination
+                of Blender and After Effects. This multimedia project involved a
+                fusion of 3D animation and post-production effects, resulting in
+                a visually captivating and dynamic video that perfectly
+                complemented the music's rhythm and style. Through meticulous
+                attention to detail and creative design, I was able to deliver a
+                music video that not only met but exceeded the client's
+                expectations, underscoring the versatility and power of these
+                software tools in the realm of multimedia content creation.
               </p>
+              <a
+                href="https://www.youtube.com/watch?v=C_vCPBZxQLo&ab_channel=KartikeyaMishra."
+                target="_blank"
+                >View Now!</a
+              >
             </div>
             <div class="project-img">
-              <img src="./img/img-1.png" alt="img" />
+              <img src="images/tgt.png" alt="tgt" />
             </div>
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 3</h1>
-              <h2>Coding is Love</h2>
+              <h1>Story of My Life Mix</h1>
+              <h2>FL Studio</h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,
-                iusto cupiditate voluptatum impedit unde rem ipsa distinctio
-                illum quae mollitia ut, accusantium eius odio ducimus illo neque
-                atque libero non sunt harum? Ipsum repellat animi, fugit
-                architecto voluptatum odit et!
+                I composed a music mix using FL Studio that garnered millions of
+                views on Instagram. This music mix captivated the audience with
+                its engaging rhythm, unique sound, and seamless transitions,
+                making it a viral sensation on the platform. Through my creative
+                use of FL Studio's powerful music production features, I was
+                able to craft an irresistible sonic experience that resonated
+                with a broad and diverse audience, establishing the track as a
+                hit within the realm of social media content.
               </p>
+              <a
+                href="https://www.youtube.com/watch?v=YdqwFRcvcz0&ab_channel=SamehWaghmare"
+                target="_blank"
+                >View Now!</a
+              >
             </div>
             <div class="project-img">
-              <img src="./img/img-1.png" alt="img" />
+              <img src="images/soml.png" alt="soml" />
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- End Projects Section -->
 
-    <!-- About Section -->
     <section id="about">
       <div class="about container">
         <div class="col-left">
@@ -172,23 +174,20 @@
           </div>
         </div>
         <div class="col-right">
-          <h1 class="section-title">About <span>me</span></h1>
-          <h2>Front End Developer</h2>
+          <h1 class="section-title">About Me</h1>
+          <h2>Designer</h2>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Asperiores, velit alias eius non illum beatae atque repellat ratione
-            qui veritatis repudiandae adipisci maiores. At inventore
-            necessitatibus deserunt exercitationem cumque earum omnis ipsum rem
-            accusantium quis, quas quia, accusamus provident suscipit magni!
-            Expedita sint ad dolore, commodi labore nihil velit earum ducimus
-            nulla quae nostrum fugit aut, deserunt reprehenderit libero enim!
+            Hey, nice to meet you. I'm an aspiring designer and musician who has
+            been dedicated to honing my crafts for several years. I'm always
+            enthusiastic and enjoy taking on new projects. I have been
+            experimenting with and learning various software applications since
+            I was 14. I began playing the guitar at the age of 12, and I've been
+            passionate about music ever since.
           </p>
         </div>
       </div>
     </section>
-    <!-- End About Section -->
 
-    <!-- Footer -->
     <section id="footer">
       <div class="footer container">
         <div class="brand">
@@ -198,7 +197,6 @@
         <p>Web Coding TEE</p>
       </div>
     </section>
-    <!-- End Footer -->
     <script src="./app.js"></script>
   </body>
 </html>
