--- a/index.html
+++ b/index.html
@@ -197,6 +197,6 @@
         <p>Web Coding TEE</p>
       </div>
     </section>
-    <script src="./app.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
